--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "coffeapp",
+  "name": "movieapp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,17 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "react": "18.2.0",
     "react-native": "0.73.1",
-    "react-native-gesture-handler": "^2.14.0",
     "react-native-heroicons": "^3.2.0",
-    "react-native-reanimated": "^3.6.1",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "^3.29.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^14.1.0"
   },
@@ -33,7 +27,6 @@
     "@react-native/metro-config": "^0.73.2",
     "@react-native/typescript-config": "^0.73.1",
     "@types/react": "^18.2.6",
-    "@types/react-native-snap-carousel": "^3.8.10",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
